# hw_akos

./: README.md  hw7_akos.c  hw7_akos.txt
hw10_akos/: parallel_sum.c  отчет.txt
hw8_akos/: CMakeLists.txt  client.c  server.c  отчет_8дз.txt
hw9_akos/: receiver.c  sender.c  отчет_9дз.rtf
ihw3/: Makefile  README.md  cleanup.sh  common.c  common.h  librarian  librarian.c  observer  observer.c  reader  reader.c  run_library.sh
ihw4/: library.c
шрц4/: отчет_4идз_34вар.txt
